Resolvi problema de footer, ademas de eso modifique estilo para que las fotos se vean similar a un album lo cual lo hace mas visualmente atractivo, agregue texto de que el equipo esta comprometido

--- a/app/vistas/equipo.html
+++ b/app/vistas/equipo.html
@@ -119,6 +119,56 @@
         </section>
     <br>
 
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <h1 class="font-weight-bold text-light text-center bg-dark">Nuestra Experiencia Nos Respalda</h1>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="../recursos/img/gallery-1.jpg" class="d-block w-100" alt="Imagen 1">
+            </div>
+            <div class="carousel-item">
+                <img src="../recursos/img/ciru.png" class="d-block w-100" alt="Imagen 2">
+            </div>
+            <div class="carousel-item">
+                <img src="../recursos/img/gallery-2.jpg" class="d-block w-100" alt="Imagen 3">
+            </div>
+
+
+            <div class="carousel-item">
+                <img src="../recursos/img/ultrasonido.jpeg" class="d-block w-100" alt="Imagen 3">
+            </div>
+            <div class="carousel-item">
+                <img src="../recursos/img/gallery-3.jpg" class="d-block w-100" alt="Imagen 3">
+            </div>
+            <div class="carousel-item">
+                <img src="../recursos/img/respirador.jpeg" class="d-block w-100" alt="Imagen 3">
+            </div>
+
+
+            <div class="carousel-item">
+                <img src="../recursos/img/gallery-4.jpg" class="d-block w-100" alt="Imagen 3">
+            </div>
+            <div class="carousel-item">
+                <img src="../recursos/img/resonancia.jpeg" class="d-block w-100" alt="Imagen 3">
+            </div>
+            <div class="carousel-item">
+                <img src="../recursos/img/gallery-5.jpg" class="d-block w-100" alt="Imagen 3">
+            </div>
+            <div class="carousel-item">
+                <img src="../recursos/img/gallery-6.jpg" class="d-block w-100" alt="Imagen 3">
+            </div>
+            <!-- Agrega más elementos carousel-item según sea necesario -->
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon " aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+        </button>
+    </div>
+    
+<!-- 
     <div class="container-fluid text-center bg-morado">
         <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
             <div class="col">
@@ -136,6 +186,9 @@
                     <img src="../recursos/img/gallery-2.jpg" class="img-fluid me-3" width="350" height="350">
                 </div>
             </div>
+
+
+
             <div class="col">
                 <div class="p-3">
                     <img src="../recursos/img/ultrasonido.jpeg" class="img-fluid me-3" width="350" height="350">
@@ -173,137 +226,7 @@
                 </div>
             </div>
         </div>
-    </div>
-    <script src="./footer.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-</body>
-</html>
-                    </div>
-                </div>
-            </div>    
-        </section>
-    <br>
-
-    <div class="container-fluid text-center bg-morado">
-        <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/gallery-1.jpg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/electro.jpeg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/gallery-2.jpg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/ultrasonido.jpeg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/gallery-3.jpg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/respirador.jpeg" class="img-fluid me-3" width="350" height="350">
-
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/gallery-4.jpg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/resonancia.jpeg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/gallery-5.jpg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/gallery-6.jpg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="./footer.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-</body>
-</html>
-                    </div>
-                </div>
-            </div>    
-        </section>
-    <br>
-
-    <div class="container-fluid text-center bg-morado">
-        <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/gallery-1.jpg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/electro.jpeg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/gallery-2.jpg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/ultrasonido.jpeg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/gallery-3.jpg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/respirador.jpeg" class="img-fluid me-3" width="350" height="350">
-
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/gallery-4.jpg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/resonancia.jpeg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/gallery-5.jpg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-            <div class="col">
-                <div class="p-3">
-                    <img src="../recursos/img/gallery-6.jpg" class="img-fluid me-3" width="350" height="350">
-                </div>
-            </div>
-        </div>
-    </div>
+    </div> -->
     <script src="./footer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
